# tinybeans-sync

./: .gitignore  .pre-commit-config.yaml  README.md  api.py  auth.py  cli.py  config.yaml.example  date_handler.py  downloader.py  history.py  pyproject.toml
src/: api.py  downloader.py  history.py
systemd/: install.sh  tinybeans-sync.service  tinybeans-sync.timer
tinybeans_sync/: api.py  auth.py  cli.py  downloader.py  history.py
