[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinybeans-sync"
version = "0.3"
description = "Download original quality images from Tinybeans photo journals"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
  { name = "Wyatt Brege" },
]
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28.0",
  "beautifulsoup4>=4.11.0",
  "PyYAML>=6.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics",
]

[project.urls]
Repository = "https://github.com/brege/tinybeans-sync"

[project.scripts]
tinybeans-sync = "tinybeans_sync.cli:main"

[dependency-groups]
dev = [
  "ty>=0.0.18",
]

[tool.ty.src]
include = ["tinybeans_sync"]
respect-ignore-files = true

[tool.hatch.build.targets.wheel]
packages = ["tinybeans_sync"]

[tool.hatch.build.targets.sdist]
include = ["/tinybeans_sync", "/config.yaml.example", "/systemd"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E203"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
